--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,9 @@ header{
     color: var(--primary);
     font-weight: 500;
 }
+.fa-bars{
+    display: none;
+}
 /* .................about section.................. */
 
 .about{
@@ -277,6 +280,7 @@ header{
     font-size: 1rem;
     opacity: 0;
     animation: showText 0.5s 1s linear forwards;
+    
 }
 @keyframes showText {
     100% {
@@ -318,15 +322,15 @@ header{
     width: 60%;
 }
 
-.bar .progress-line.jquery span {
+.bar .progress-line.javascript span {
     width: 85%;
 }
 
-.bar .progress-line.python span {
-    width: 50%;
+.bar .progress-line.tailwind span {
+    width: 90%;
 }
 
-.bar .progress-line.mysql span {
+.bar .progress-line.bootstrap span {
     width: 75%;
 }
 
@@ -371,14 +375,14 @@ header{
     content: "60%";
 }
 
-.progress-line.jquery span::after {
+.progress-line.javascript span::after {
     content: "85%";
 }
 
-.progress-line.python span::after {
-    content: "50%";
+.progress-line.tailwind span::after {
+    content: "90%";
 }
-.progress-line.mysql span::after {
+.progress-line.bootstrap span::after {
     content: "75%";
 }
 /*project------------ */
@@ -388,6 +392,16 @@ header{
 .project_container{
     display: flex;
     gap: 1rem;
+}
+.project_img{
+    border: 5px solid var(--primary);
+    overflow: hidden;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
+    align-items: center;
+    margin-bottom: 2rem;
+}
+.project_img img:hover{
+    transform: scale(1.4);
+
 }
 
 /* ---------------footer section----------------------- */
@@ -437,11 +451,39 @@ footer ul li a:hover {
     border-top: 1px solid var(--normal);
 }
 /* -----------media qurasie tablet---------- */
-@media screen and (max-width:1024px) {
+@media screen and (max-width:800px) {
     .container {
         width: var(--container-width-md);
     }
+    .fa-bars{
+        display:block;
+    }
+    .nav-menu ul{
+        display: block;
+        
+    }
+    .nav-menu{
+        position: absolute;
+        top: 100px;
+        display: none;
+        width: 50%;
+        background-color: aqua;
+    
+        padding: 20px 20px;
 
+    }
+    .nav-menu ul li a{
+        display: block;
+         margin-bottom: 20px;
+         gap: 10px;
+         
+        
+    }
+    .nav-menu.active{
+        display: block;
+        text-align: center;
+        
+    }
     h1 {
         font-size: 2.2rem;
     }
@@ -477,22 +519,15 @@ footer ul li a:hover {
     .btn {
         padding: 0.3rem 1.2rem;
     }
+
 }
 
-    /* ======NAVBAR OPEN======= */
-    
-
-    
-
-    
-    
-    
 /* ------------mobile responsive--------- */
 @media screen and (max-width:600px) {
     .container{
         width: var(--container-width-sm);
     }    
-    .nav_menu{
+    .nav-menu{
         right: 3%;
     }
 
@@ -518,42 +553,24 @@ footer ul li a:hover {
     .about_container{
         flex-direction: column;
     }
-    .services_container .cards {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 3rem;
-    }
+    .project_img{
     
-    .services_container .cards .card {
-       padding: 3rem 1rem;
-       margin: 1rem 1rem;
+        padding: auto;
+        border: 1px solid white;
     }
-    .services_container .cards .card:hover::after {
-        transform: rotate(5deg);
-    }
-
-    .gallery a{
-        width: 25rem;
-    }
-
-    .courses_container{
-        grid-template-columns: 1fr;
-        width: 80%;
-    }
-
-    .courses_container .course{
-        margin-bottom: 1rem;
+    .project_container{
+    flex-direction: column;
     }
 
     .footer_container{
         grid-template-columns: 1fr;
         text-align: center;
-        gap: 2rem;
+        gap: 1rem;
     }
 
     .footer_social{
         justify-content: center;
     }
 }
+
                                                                                                                                                                                  
